// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: RoundButton should match its empty snapshot 1`] = `
<div>
  <button
    className="btn-circle primary"
    style={
      Object {
        "backgroundSize": 25,
        "height": 50,
        "width": 50,
      }
    }
  />
</div>
`;

exports[`Component: RoundButton should use the className and children 1`] = `
<div
  className="add-post"
>
  <button
    className="btn-circle primary"
    style={
      Object {
        "backgroundSize": 25,
        "height": 50,
        "width": 50,
      }
    }
  >
    Add a Book
  </button>
</div>
`;

exports[`Component: RoundButton should use the correct type from props 1`] = `
<div>
  <button
    className="btn-circle secondary"
    style={
      Object {
        "backgroundSize": 25,
        "height": 50,
        "width": 50,
      }
    }
  >
    Add a Book
  </button>
</div>
`;

exports[`Component: RoundButton should use the size and background properties for the inner span style 1`] = `
<RoundButton
  backgroundImage="./test.jpg"
  size={30}
  type="primary"
>
  <div
    className={undefined}
  >
    <button
      className="btn-circle primary"
      onClick={undefined}
      style={
        Object {
          "backgroundImage": "url(./test.jpg)",
          "backgroundSize": 15,
          "height": 30,
          "width": 30,
        }
      }
    />
  </div>
</RoundButton>
`;
